# Lentera-MD-Converter

./: .gitignore  HOW_TO_USE.md  LAPORAN_PEKERJAAN.md  LICENSE  LegalMDConverter.spec  PHASE_1_2_VERIFICATION.md  README.md  RELEASE.md  RINGKASAN_INTERAKSI.md  ROOT_CAUSE_ANALYSIS.md  app.entitlements  attentionlatter.md  build_app.py  build_debian.sh  build_macos.sh  legal-md-converter.desktop  pyproject.toml
assets/icons/: app_icon.icns
assets/kbbi/: schema.sql
assets/templates/: academic.md  basic.md  legal.md
installer/linux/: build_appimage.sh
installer/windows/: lentera_md_setup.iss
src/legal_md_converter/: __init__.py  app.py  main.py
src/legal_md_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/legal_md_converter/data/: __init__.py  asset_manager.py  kbbi_database.py  kbbi_searcher.py  user_dictionary.py
src/legal_md_converter/engine/: __init__.py  docling_config.py  docling_parser.py  document_parser.py  document_parser_worker.py  document_service.py  indonesian_text_processor.py  large_file_processor.py  markdown_converter.py  spell_check_result.py  spell_check_worker.py  spell_checker.py
src/legal_md_converter/platform/: __init__.py  base_adapter.py  linux_adapter.py  macos_adapter.py  windows_adapter.py
src/legal_md_converter/ui/: __init__.py  main_window.py
src/legal_md_converter/ui/styles/: __init__.py  app_theme.py
src/legal_md_converter/ui/widgets/: __init__.py  document_preview.py  export_dialog.py  file_drop_widget.py  markdown_preview.py  preview_widget.py  progress_dialog.py  spellcheck_panel.py
src/legal_md_converter/utils/: __init__.py  dependency_checker.py  path_utils.py  thread_worker.py
tests/: test_phase2.py  test_phase3.py  test_phase4.py  test_ui.py
