[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lentera-md"
version = "1.0.0"
description = "Lentera MD — Convert Indonesian legal documents to Markdown"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<4.0"
authors = [
    {name = "Lentera MD Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Office/Business",
]

dependencies = [
    "PySide6>=6.6.0",
    "docling>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.2",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
lentera-md = "legal_md_converter.main:main"

[project.gui-scripts]
lentera-md-gui = "legal_md_converter.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pyinstaller]
hookspath = ["hooks"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"

# Briefcase configuration for cross-platform packaging
[tool.briefcase]
project_name = "Lentera MD"
bundle = "com.lenteramd"
author = "Lentera MD Team"
url = "https://github.com/ziffan/Lentera-MD-Converter"
license = "MIT"

[tool.briefcase.app.linux.appimage]
requires = []
system_requires = [
    "libpoppler-qt5-dev",
    "poppler-utils",
    "tesseract-ocr",
    "tesseract-ocr-ind",
]

[tool.briefcase.app.linux.deb]
requires = []
system_requires = [
    "libpoppler-qt5-dev",
    "poppler-utils",
    "tesseract-ocr",
    "tesseract-ocr-ind",
]

[tool.briefcase.app.macos.app]
requires = []

[tool.briefcase.app.macos.app.info_plist]
CFBundleDisplayName = "Lentera MD"
CFBundleIdentifier = "com.lenteramd.app"
CFBundleName = "LenteraMD"
LSMinimumSystemVersion = "10.15"
NSHumanReadableCopyright = "Copyright 2026 Lentera MD"
LSApplicationCategoryType = "public.app-category.productivity"
NSSupportsAutomaticTermination = true
NSSupportsSuddenTermination = true

[tool.briefcase.app.windows.msi]
requires = []
